# ai-tutor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-30-ai-tutor-multi-llm-provider.md  2026-06-30-ai-tutor-phase0-1a-foundation-ingest.md  2026-06-30-ai-tutor-phase1b-classify-synthesize-kb.md  2026-06-30-ai-tutor-phase1c-tutor-rag.md
docs/superpowers/specs/: 2026-06-30-ai-tutor-design.md
scripts/: build_kb.py  ingest_once.py  run_bot.py
src/ai_tutor/: claude_client.py  config.py  db.py  llm.py  providers.py
src/ai_tutor/classify/: classifier.py  heuristics.py  types.py
src/ai_tutor/ingest/: hashing.py  pipeline.py  router.py
src/ai_tutor/ingest/processors/: docx_processor.py  image_processor.py  pdf_processor.py  text_processor.py  video_processor.py
src/ai_tutor/kb/: build.py  paths.py  retrieval.py  store.py
src/ai_tutor/synthesize/: synthesizer.py
src/ai_tutor/tutor/: bot.py  prompts.py  students.py  tutor_service.py
tests/: test_bot_echo.py  test_claude_client.py  test_config.py  test_db.py  test_llm.py  test_smoke.py
tests/classify/: test_classifier.py  test_heuristics.py
tests/ingest/: test_docx_processor.py  test_hashing.py  test_image_processor.py  test_pdf_processor.py  test_pipeline.py  test_router.py  test_text_processor.py  test_video_processor.py
tests/kb/: test_build.py  test_paths.py  test_retrieval.py  test_store.py
tests/synthesize/: test_synthesizer.py
tests/tutor/: test_bot_handlers.py  test_prompts.py  test_students.py  test_tutor_service.py
